# web-api

./: .clang-format  CMakeLists.txt  config.h.in  config.json  restful.json
apk-manager/: CMakeLists.txt  am.h  apk-manager.cc  git.cc
cmake/: CPPMHD.cmake  Check.cmake  JSON.cmake
ostool/: CMakeLists.txt
ostool/include/: barrier.h  crypto.h  cxx_utils.h  fs.h  os.h  process.h
ostool/src/: crypto.cc  cxx_utils.cc  fs.cc  os.cc  process.cc
src/: app.cc  conf.h  logger.h  utils.h
src/v1/: apk.cc  apk.h
web-api/: CMakeLists.txt  decl.h  logger.cc  serialize.cc  utils.cc
web-api/v1/: serialize.cc  v1.cc  v1.h
